--- a/Editor/unittests/all.html
+++ b/Editor/unittests/all.html
@@ -3,11 +3,11 @@
 <head>
     <title>Rich text commands unit test suite</title>
     <!--Rich text dependencies and rich text script-->
-    <script type="text/javascript" src="dependencies/jquery-current.js"></script>
+    <script type="text/javascript" src="dependencies/jquery.js"></script>
 
     <!--Test Infrastructure-->
-    <link href="dependencies/Qunit/qunit-1.12.0.css" rel="stylesheet" type="text/css" />
-    <script src="dependencies/Qunit/qunit-1.12.0.js" type="text/javascript"></script>
+    <link href="dependencies/QUnit/qunit.css" rel="stylesheet" type="text/css" />
+    <script src="dependencies/QUnit/qunit.js" type="text/javascript"></script>
     <script type="text/javascript" src="unitTestsHelper.js"></script>
 
     <!--Files To Test-->
