--- a/tests/all.html
+++ b/tests/all.html
@@ -1,84 +1,24 @@
 <!doctype html>
 <html>
 <head>
-    <title>Rich text commands unit test suite</title>
-    <!--Rich text dependencies and rich text script-->
-    <script src="dependencies/jquery.js"></script>
+    <meta charset="utf-8">
 
     <!--Test Infrastructure-->
-    <link href="dependencies/QUnit/qunit.css" rel="stylesheet" type="text/css" />
+    <link href="dependencies/QUnit/qunit.css" rel="stylesheet" />
     <script src="dependencies/QUnit/qunit.js" type="text/javascript"></script>
-    <script src="unitTestsHelper.js"></script>
 
-    <!--Files To Test-->
+    <link href="dependencies/QUnit/qunit-composite.css" rel="stylesheet" />
+    <script src="dependencies/Qunit/qunit-composite.js"></script>
 
-    <script src="../external/rangy/lib/rangy-core.js"></script>
-    <script src="../external/rangy/lib/rangy-selectionsaverestore.js"></script>
-
-    <script src="../src/editor/core/Arte.js"></script>
-    <script src="../src/editor/core/TextArea.js"></script>
-    <script src="../src/editor/core/Configuration.js"></script>
-    <script src="../src/editor/core/Commands.js"></script>
-    <script src="../src/editor/core/PluginManager.js"></script>
-    <script src="../src/editor/core/Util.js"></script>
-
-    <script src="../src/editor/lib/jquery-extensions/jquery-dom-manipulation.js"></script>
-    <script src="../src/editor/lib/jquery-extensions/jquery-dom-traversal.js"></script>
-    <script src="../src/editor/lib/jquery-extensions/jquery-dom-cleanup.js"></script>
-
-    <script src="../src/editor/lib/rangy-extensions/rangy-blockElementApplier.js"></script>
-    <script src="../src/editor/lib/rangy-extensions/rangy-elementApplierOptions.js"></script>
-    <script src="../src/editor/lib/rangy-extensions/rangy-extensions.js"></script>
-    <script src="../src/editor/lib/rangy-extensions/rangy-inlineElementApplier.js"></script>
-    <script src="../src/editor/lib/rangy-extensions/richtextCommandApplier.js"></script>
-
-
-    <script src="../src/editor/plugins/InsertCommand.js"></script>
-    <script src="../src/editor/plugins/keyboardEventHandler.js"></script>
-    <script src="../src/editor/plugins/pasteHandler.js"></script>
-    <script src="../src/editor/plugins/StateDetector.js"></script>
-    <script src="../src/editor/plugins/UndoManager.js"></script>
-    <!-- End of files being tested !-->
-
-    <!-- Add the test element id and selector-->
-    <script type="text/javascript">
-        TEST_ELEMENT_ID = "test-element";
-        TEST_ELEMENT_SELECTOR = "#" + TEST_ELEMENT_ID;
+    <script>
+        QUnit.testSuites([
+            { name: "jQuery 1.9.1", path: "index.html?jquery=1.9.1" },
+            { name: "jQuery 1.8.3", path: "index.html?jquery=1.8.3" },
+            { name: "jQuery 1.8.3", path: "index.html?jquery=1.7.2" }
+        ]);
     </script>
-
-
-    <!-- Core Test cases -->
-
-    <script src="core/Commands.UnitTests.js"></script>
-    <script src="core/Events.UnitTests.js"></script>
-    <script src="core/TextArea.UnitTests.js"></script>
-
-    <!--Extensions Unit-tests-->
-    <script src="lib/jquery-extensions/jQueryDomCleanup.UnitTests.js"></script>
-    <script src="lib/jquery-extensions/jQueryDomManipulation.UnitTests.js"></script>
-    <script src="lib/jquery-extensions/jQueryDomTraversal.UnitTests.js"></script>
-
-    <script src="lib/rangy-extensions/RangyBlockElementApplier.UnitTests.js"></script>
-    <script src="lib/rangy-extensions/RangyInlineElementApplier.UnitTests.js"></script>
-    <script src="lib/rangy-extensions/RangyExtensions.UnitTests.js"></script>
-    <script src="lib/rangy-extensions/RichTextCommandApplier.UnitTests.js"></script>
-
-    <!--Plugins-->
-    <script src="plugins/InsertCommand.UnitTests.js"></script>
-    <script src="plugins/KeyboardEventHandler.UnitTests.js"></script>
-    <script src="plugins/PasteHandler.UnitTests.js"></script>
-    <script src="plugins/UndoManager.UnitTests.js"></script>
-    <script src="plugins/StateDetector.UnitTests.js"></script>
-    <!-- End of Unit Test references !-->
-
 </head>
 <body>
     <div id="qunit"></div>
-
-    <div id="qunit-fixture">
-        <!-- If you need to do DOM manipulation, do it in this element !-->
-        <div id="test-element"></div>
-        test markup, will be hidden
-    </div>
 </body>
 </html>
