rangy is now an external dependency from npm

--- a/tests/all.html
+++ b/tests/all.html
@@ -12,8 +12,8 @@
 
     <!--Files To Test-->
 
-    <script src="../Editor/lib/rangy-1.3alpha.804/rangy-core.js"></script>
-    <script src="../Editor/lib/rangy-1.3alpha.804/rangy-selectionsaverestore.js"></script>
+    <script src="../external/rangy/lib/rangy-core.js"></script>
+    <script src="../external/rangy/lib/rangy-selectionsaverestore.js"></script>
 
     <script src="../Editor/core/Arte.js"></script>
     <script src="../Editor/core/TextArea.js"></script>
