--- a/tests/all.html
+++ b/tests/all.html
@@ -15,29 +15,29 @@
     <script src="../external/rangy/lib/rangy-core.js"></script>
     <script src="../external/rangy/lib/rangy-selectionsaverestore.js"></script>
 
-    <script src="../Editor/core/Arte.js"></script>
-    <script src="../Editor/core/TextArea.js"></script>
-    <script src="../Editor/core/Configuration.js"></script>
-    <script src="../Editor/core/Commands.js"></script>
-    <script src="../Editor/core/PluginManager.js"></script>
-    <script src="../Editor/core/Util.js"></script>
+    <script src="../src/editor/core/Arte.js"></script>
+    <script src="../src/editor/core/TextArea.js"></script>
+    <script src="../src/editor/core/Configuration.js"></script>
+    <script src="../src/editor/core/Commands.js"></script>
+    <script src="../src/editor/core/PluginManager.js"></script>
+    <script src="../src/editor/core/Util.js"></script>
 
-    <script src="../Editor/lib/jquery-extensions/jquery-dom-manipulation.js"></script>
-    <script src="../Editor/lib/jquery-extensions/jquery-dom-traversal.js"></script>
-    <script src="../Editor/lib/jquery-extensions/jquery-dom-cleanup.js"></script>
+    <script src="../src/editor/lib/jquery-extensions/jquery-dom-manipulation.js"></script>
+    <script src="../src/editor/lib/jquery-extensions/jquery-dom-traversal.js"></script>
+    <script src="../src/editor/lib/jquery-extensions/jquery-dom-cleanup.js"></script>
 
-    <script src="../Editor/lib/rangy-extensions/rangy-blockElementApplier.js"></script>
-    <script src="../Editor/lib/rangy-extensions/rangy-elementApplierOptions.js"></script>
-    <script src="../Editor/lib/rangy-extensions/rangy-extensions.js"></script>
-    <script src="../Editor/lib/rangy-extensions/rangy-inlineElementApplier.js"></script>
-    <script src="../Editor/lib/rangy-extensions/richtextCommandApplier.js"></script>
+    <script src="../src/editor/lib/rangy-extensions/rangy-blockElementApplier.js"></script>
+    <script src="../src/editor/lib/rangy-extensions/rangy-elementApplierOptions.js"></script>
+    <script src="../src/editor/lib/rangy-extensions/rangy-extensions.js"></script>
+    <script src="../src/editor/lib/rangy-extensions/rangy-inlineElementApplier.js"></script>
+    <script src="../src/editor/lib/rangy-extensions/richtextCommandApplier.js"></script>
 
 
-    <script src="../Editor/plugins/InsertCommand.js"></script>
-    <script src="../Editor/plugins/keyboardEventHandler.js"></script>
-    <script src="../Editor/plugins/pasteHandler.js"></script>
-    <script src="../Editor/plugins/StateDetector.js"></script>
-    <script src="../Editor/plugins/UndoManager.js"></script>
+    <script src="../src/editor/plugins/InsertCommand.js"></script>
+    <script src="../src/editor/plugins/keyboardEventHandler.js"></script>
+    <script src="../src/editor/plugins/pasteHandler.js"></script>
+    <script src="../src/editor/plugins/StateDetector.js"></script>
+    <script src="../src/editor/plugins/UndoManager.js"></script>
     <!-- End of files being tested !-->
 
     <!-- Add the test element id and selector-->
