--- a/Demo/Demo.html
+++ b/Demo/Demo.html
@@ -72,10 +72,10 @@
         <div class="console" style="max-height: 200px; overflow: auto;"></div>
     </div>
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/json2.js"></script>
-    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="demo.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="scripts/json2.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="demo.js"></script>
 
     <script src="../dist/rangy.js"></script>
     <script src="../dist/arte.min.js"></script>
