Add more commands tests

--- a/tests/single.html
+++ b/tests/single.html
@@ -41,7 +41,8 @@
     <script src="new/core.js"></script>
     <script src="new/methods.js"></script>
     <script src="new/events.js"></script>
-    <script src="new/commands.js"></script>
+    <script src="new/commands-plaintext.js"></script>
+    <script src="new/commands-richtext.js"></script>
 
     <!-- playground --><!--
 
