--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ $(".editor").fontSize(10); // Change fontsize of the selected text to 10px
                     </li>
                     <li>A small dependency footprint: jQuery and Rangy 1.2.3 (Included with ArteJS).
                     </li>
-                    <li>Full control over the resultant HTML. TODO: Links to examples with Classes/Styles/Tags for a command
+                    <li>Full control over the resultant HTML using <a href="http://vistaprint.github.io/ArteJS/#Commands">commands</a>.
                     </li>
                     <li>A loosely coupled architecture based on plugins that can be used to add new or overwrite existing functionality. In fact, a large part of the functionality is built using plugins.
                     </li>
-                    <li>ArteJS supports a clean interface for toolbar integration. TODO: Link to reference toolbar implementations that can support multiple editors with a single toolbar or one toolbar for each editor.
+                    <li>ArteJS supports a clean interface for toolbar integration. See <a href="http://vistaprint.github.io/ArteJS/#SimpleToolbarExamples">examples</a>.
                     </li>
                     <li>Semantically concise and valid markup (e.g.: no redundant styles, classes or tags).
                     </li>
