Fix same page links

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ $(".editor").fontSize(10); // Change fontsize of the selected text to 10px
                     </li>
                     <li>A small dependency footprint: jQuery and Rangy 1.2.3 (Included with ArteJS).
                     </li>
-                    <li>Full control over the resultant HTML using <a href="http://vistaprint.github.io/ArteJS/#Commands">commands</a>.
+                    <li>Full control over the resultant HTML using <a href="#Commands">commands</a>.
                     </li>
                     <li>A loosely coupled architecture based on plugins that can be used to add new or overwrite existing functionality. In fact, a large part of the functionality is built using plugins.
                     </li>
-                    <li>ArteJS supports a clean interface for toolbar integration. See <a href="http://vistaprint.github.io/ArteJS/#SimpleToolbarExamples">examples</a>.
+                    <li>ArteJS supports a clean interface for toolbar integration. See <a href="#SimpleToolbarExamples">examples</a>.
                     </li>
                     <li>Semantically concise and valid markup (e.g.: no redundant styles, classes or tags).
                     </li>
@@ -114,7 +114,7 @@ $(".editor").fontSize(10); // Change fontsize of the selected text to 10px
                 <h2>Feature Demonstrator</h2>
                 <iframe class="editor-demo" src="Demos/FeatureDemonstrator/Demo.html"></iframe>
 
-                <h2>Simple Toolbar Examples</h2>
+                <h2 id="SimpleToolbarExamples">Simple Toolbar Examples</h2>
                 <a href="Demos/SimpleToolbar/Demo.html">Simple toolbar</a><br />
                 <a href="Demos/UnobtrusiveToolbar/Demo.html">Unobtrusive toolbar</a>
 
@@ -126,7 +126,7 @@ $(".editor").fontSize(10); // Change fontsize of the selected text to 10px
                 <a href="Demos/MultipleEditors/Demo.html">Multiple toolbars/editors</a>
 
                 <h1>Rich Text API Reference</h1>
-                <h2>Commands</h2>
+                <h2 id="Commands">Commands</h2>
                 A rich text command can be applied using an HTML tag, a style, or a class name. ArteJS allows applying the command using any of these three mechanisms.
              <br />
                 Note that the default configuration excludes the use of deprecated HTML tags (e.g.: font).  Configuration can be easily updated to use the deprecated HTML tags if needed.
