Fix invalid link

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ $.Arte.Toolbar.configuration.buttons.fontSize.options = [
                 There are two ways to skin the toolbar
                 <ul>
                     <li>Overwrite the <a href="https://github.com/vistaprint/ArteJS/blob/gh-pages/Demos/CommonFiles/CSS/toolbar.css">default styles</a></li>
-                    <li>Update the <a href="https://github.com/vistaprint/ArteJS/blob/master/src/toolbar/Configuration.js#L248>configuration"> to use your classes</a></li>
+                    <li>Update the <a href="https://github.com/vistaprint/ArteJS/blob/master/src/toolbar/Configuration.js#L248">configuration</a> to use your classes</li>
                 </ul>
 
                 <h1>Project Details</h1>
