--- a/InsertCommand.html
+++ b/InsertCommand.html
@@ -11,15 +11,15 @@
 
   <!--[if lt IE 9]> <script src="javascripts/html5shiv.js"></script> <![endif]-->
 
-  <link rel='stylesheet' id='responsive-style-css' href='/stylesheets/style.css' type='text/css' />
-  <link rel='stylesheet' id='responsive-media-queries-css'  href='/stylesheets/media-queries.css' type='text/css'/>
-  <link rel="stylesheet" href='/stylesheets/syntax-highlighting.css'/>
+  <link rel='stylesheet' id='responsive-style-css' href='stylesheets/style.css' type='text/css' />
+  <link rel='stylesheet' id='responsive-media-queries-css'  href='stylesheets/media-queries.css' type='text/css'/>
+  <link rel="stylesheet" href='stylesheets/syntax-highlighting.css'/>
 
-  <script type='text/javascript' src='/javascripts/jquery.js'></script>
-  <script type='text/javascript' src='/javascripts/jquery-migrate.min.js'></script>
-  <script type='text/javascript' src='/javascripts/responsive-modernizr.js'></script>
-  <script type="text/javascript" src='/javascripts/script.js'></script>
-  <script type="text/javascript" src='/javascripts/toc.js'></script>
+  <script type='text/javascript' src='javascripts/jquery.js'></script>
+  <script type='text/javascript' src='javascripts/jquery-migrate.min.js'></script>
+  <script type='text/javascript' src='javascripts/responsive-modernizr.js'></script>
+  <script type="text/javascript" src='javascripts/script.js'></script>
+  <script type="text/javascript" src='javascripts/toc.js'></script>
 
   <title>ArteJS</title>
 
@@ -40,37 +40,37 @@
             
         <div class="main-nav">
           <ul class="menu">
-            <li class="current_page_item"><a href="/index.html" title="Home">Home</a></li>
-            <li class="page_item"><a href="/artejs.zip">Download</a></li>
+            <li class="current_page_item"><a href="index.html" title="Home">Home</a></li>
+            <li class="page_item"><a href="artejs.zip">Download</a></li>
             <li class="page_item"><a href="#" onclick="return false;">Documentation</a>
               <ul class='children'>
-                <li class="page_item"><a href='/overview.html'>Overview</a>
+                <li class="page_item"><a href='/Overview.html'>Overview</a>
                 <li class="page_item"><a href="#" onclick="return false;">Core</a>
                   <ul class="children">
-                    <li class="page_item"><a href='/textarea.html'>Text Area</a></li>
-                    <li class="page_item"><a href='/commands.html'>Commands</a></li>
-                    <li class="page_item"><a href='/events.html'>Events</a></li>           
+                    <li class="page_item"><a href='TextArea.html'>Text Area</a></li>
+                    <li class="page_item"><a href='Commands.html'>Commands</a></li>
+                    <li class="page_item"><a href='Events.html'>Events</a></li>           
                   </ul>
                 </li>
                 <li class="page_item"><a href="#" onclick="return false;">Plugins</a>
                   <ul class="children">
-                    <li class="page_item"><a href='/statedetector.html'>State Detector</a></li>
-                    <li class="page_item"><a href='/undomanager.html'>Undo Manager</a></li>
-                    <li class="page_item"><a href='/keyboardeventhandler.html'>Keyboard Event Handler</a></li>
-                    <li class="page_item"><a href='/insertcommand.html'>Insert Command</a></li>             
+                    <li class="page_item"><a href='Statedetector.html'>State Detector</a></li>
+                    <li class="page_item"><a href='Undomanager.html'>Undo Manager</a></li>
+                    <li class="page_item"><a href='KeyboardEventHandler.html'>Keyboard Event Handler</a></li>
+                    <li class="page_item"><a href='InsertCommand.html'>Insert Command</a></li>             
                   </ul>
                 </li>
               </ul>
             </li>
             <li class="page_item"><a href="#" onclick="return false;">Demos</a>
               <ul class='children'>
-                <li class="page_item"><a href='/demos/FeatureDemonstrator/demo.html'>Feature Demonstrator</a></li>
-                <li class="page_item"><a href='/demos/SimpleToolbar/demo.html'>Simple Toolbar</a></li>
-                <li class="page_item"><a href='/demos/UnobtrusiveToolbar/demo.html'>Unobtrusive Toolbar</a></li>
-                <li class="page_item"><a href='/demos/CompleteToolbar/demo.html'>Full Toolbar</a></li>
-                <li class="page_item"><a href='/demos/CompleteToolbarWithTwitterBootstrap/demo.html'>Toolbar + Twitter Bootstrap</a></li>
-                <li class="page_item"><a href='/demos/SingleToolbarMultipleEditors/demo.html'>Single toolbar with multiple editors</a></li>         
-                <li class="page_item"><a href='/demos/MultipleEditors/demo.html'>Multiple toolbars/editors</a></li>                       
+                <li class="page_item"><a href='demos/FeatureDemonstrator/Demo.html'>Feature Demonstrator</a></li>
+                <li class="page_item"><a href='demos/SimpleToolbar/Demo.html'>Simple Toolbar</a></li>
+                <li class="page_item"><a href='demos/UnobtrusiveToolbar/Demo.html'>Unobtrusive Toolbar</a></li>
+                <li class="page_item"><a href='demos/CompleteToolbar/Demo.html'>Full Toolbar</a></li>
+                <li class="page_item"><a href='demos/CompleteToolbarWithTwitterBootstrap/Demo.html'>Toolbar + Twitter Bootstrap</a></li>
+                <li class="page_item"><a href='demos/SingleToolbarMultipleEditors/Demo.html'>Single toolbar with multiple editors</a></li>         
+                <li class="page_item"><a href='demos/MultipleEditors/Demo.html'>Multiple toolbars/editors</a></li>                       
               </ul>
             </li>
           </ul>
@@ -139,6 +139,6 @@
       
   </div><!-- end #footer -->
 
-  <script type='text/javascript' src='/javascripts/responsive.js'></script>
+  <script type='text/javascript' src='javascripts/responsive.js'></script>
 </body>
 </html>
