--- a/Overview.html
+++ b/Overview.html
@@ -44,7 +44,7 @@
             <li class="page_item"><a href="artejs.zip">Download</a></li>
             <li class="page_item"><a href="#" onclick="return false;">Documentation</a>
               <ul class='children'>
-                <li class="page_item"><a href='/Overview.html'>Overview</a>
+                <li class="page_item"><a href='Overview.html'>Overview</a>
                 <li class="page_item"><a href="#" onclick="return false;">Core</a>
                   <ul class="children">
                     <li class="page_item"><a href='TextArea.html'>Text Area</a></li>
@@ -64,13 +64,13 @@
             </li>
             <li class="page_item"><a href="#" onclick="return false;">Demos</a>
               <ul class='children'>
-                <li class="page_item"><a href='demos/FeatureDemonstrator/Demo.html'>Feature Demonstrator</a></li>
-                <li class="page_item"><a href='demos/SimpleToolbar/Demo.html'>Simple Toolbar</a></li>
-                <li class="page_item"><a href='demos/UnobtrusiveToolbar/Demo.html'>Unobtrusive Toolbar</a></li>
-                <li class="page_item"><a href='demos/CompleteToolbar/Demo.html'>Full Toolbar</a></li>
-                <li class="page_item"><a href='demos/CompleteToolbarWithTwitterBootstrap/Demo.html'>Toolbar + Twitter Bootstrap</a></li>
-                <li class="page_item"><a href='demos/SingleToolbarMultipleEditors/Demo.html'>Single toolbar with multiple editors</a></li>         
-                <li class="page_item"><a href='demos/MultipleEditors/Demo.html'>Multiple toolbars/editors</a></li>                       
+                <li class="page_item"><a href='Demos/FeatureDemonstrator/Demo.html'>Feature Demonstrator</a></li>
+                <li class="page_item"><a href='Demos/SimpleToolbar/Demo.html'>Simple Toolbar</a></li>
+                <li class="page_item"><a href='Demos/UnobtrusiveToolbar/Demo.html'>Unobtrusive Toolbar</a></li>
+                <li class="page_item"><a href='Demos/CompleteToolbar/Demo.html'>Full Toolbar</a></li>
+                <li class="page_item"><a href='Demos/CompleteToolbarWithTwitterBootstrap/Demo.html'>Toolbar + Twitter Bootstrap</a></li>
+                <li class="page_item"><a href='Demos/SingleToolbarMultipleEditors/Demo.html'>Single toolbar with multiple editors</a></li>         
+                <li class="page_item"><a href='Demos/MultipleEditors/Demo.html'>Multiple toolbars/editors</a></li>                       
               </ul>
             </li>
           </ul>
