--- a/Demos/CompleteToolbar/Demo.html
+++ b/Demos/CompleteToolbar/Demo.html
@@ -54,8 +54,8 @@
                 </li>
                 <li class="page_item"><a href="#" onclick="return false;">Plugins</a>
                   <ul class="children">
-                    <li class="page_item"><a href='../../Statedetector.html'>State Detector</a></li>
-                    <li class="page_item"><a href='../../Undomanager.html'>Undo Manager</a></li>
+                    <li class="page_item"><a href='../../StateDetector.html'>State Detector</a></li>
+                    <li class="page_item"><a href='../../UndoManager.html'>Undo Manager</a></li>
                     <li class="page_item"><a href='../../KeyboardEventHandler.html'>Keyboard Event Handler</a></li>
                     <li class="page_item"><a href='../../InsertCommand.html'>Insert Command</a></li>             
                   </ul>
@@ -82,7 +82,7 @@
 
       <div class="grid col-940">
   <div class="widget-wrapper markdown-body">
-      <link rel='stylesheet' id='responsive-style-css' href='../../demos/commonfiles/css/page.css' type='text/css' />
+      <link rel='stylesheet' id='responsive-style-css' href='../../Demos/commonfiles/css/page.css' type='text/css' />
       <iframe src = "DemoContent.html"></iframe>
   </div>
 </div>
