--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 </li>
                 <li class="page_item"><a href="#" onclick="return false;">Plugins</a>
                   <ul class="children">
-                    <li class="page_item"><a href='Statedetector.html'>State Detector</a></li>
-                    <li class="page_item"><a href='Undomanager.html'>Undo Manager</a></li>
+                    <li class="page_item"><a href='StateDetector.html'>State Detector</a></li>
+                    <li class="page_item"><a href='UndoManager.html'>Undo Manager</a></li>
                     <li class="page_item"><a href='KeyboardEventHandler.html'>Keyboard Event Handler</a></li>
                     <li class="page_item"><a href='InsertCommand.html'>Insert Command</a></li>             
                   </ul>
