--- a/Commands.html
+++ b/Commands.html
@@ -35,7 +35,7 @@
       <div id="header">
                  
         <div id="logo" class="skinny-logo">
-            <a href="./">ArtéJS</a>
+            <a href="index.html">ArtéJS</a>
         </div>
             
         <div class="main-nav">
