Remove qunit-composite

--- a/tests/index.html
+++ b/tests/index.html
@@ -9,7 +9,7 @@
         // Load the version of jQuery specified in the query string
         // E.g.: "index.html?jquery=1.11.2"
         // Used for running tests against multiple versions of jQuery
-        // using qunit-composite (see all.html)
+        // (see Gruntfile.js)
         (function() {
             var item, i, script,
                 source = "dependencies/jquery-1.9.1", // in case version was not specified
